tests/ui/g-typed-route-duplicate-label.stderr
error[E0107]: function takes 4 generic arguments but 3 generic arguments were supplied
 --> tests/ui/g-typed-route-duplicate-label.rs:8:42
  |
8 | const ARM_ONE: g::Program<ArmSteps> = g::send::<Controller, Target, g::Msg<5, ()>>();
  |                                          ^^^^   ----------  ------  ------------- supplied 3 generic arguments
  |                                          |
  |                                          expected 4 generic arguments
  |
note: function defined here, with 4 generic parameters: `From`, `To`, `M`, `LANE`
 --> src/global.rs
  |
  | pub const fn send<From, To, M, const LANE: u8>() -> Program<StepCons<SendStep<From, To, M, LANE>, StepNil>>
  |              ^^^^ ----  --  -  --------------
help: add missing generic argument
  |
8 | const ARM_ONE: g::Program<ArmSteps> = g::send::<Controller, Target, g::Msg<5, ()>, LANE>();
  |                                                                                  ++++++

error[E0107]: function takes 4 generic arguments but 3 generic arguments were supplied
 --> tests/ui/g-typed-route-duplicate-label.rs:9:42
  |
9 | const ARM_TWO: g::Program<ArmSteps> = g::send::<Controller, Target, g::Msg<5, ()>>();
  |                                          ^^^^   ----------  ------  ------------- supplied 3 generic arguments
  |                                          |
  |                                          expected 4 generic arguments
  |
note: function defined here, with 4 generic parameters: `From`, `To`, `M`, `LANE`
 --> src/global.rs
  |
  | pub const fn send<From, To, M, const LANE: u8>() -> Program<StepCons<SendStep<From, To, M, LANE>, StepNil>>
  |              ^^^^ ----  --  -  --------------
help: add missing generic argument
  |
9 | const ARM_TWO: g::Program<ArmSteps> = g::send::<Controller, Target, g::Msg<5, ()>, LANE>();
  |                                                                                  ++++++

error[E0277]: the trait bound `StepCons<SendStep<Role<0>, Role<1>, Message<LabelMarker<5>, ()>>, StepNil>: hibana::global::steps::RouteArm<0>` is not satisfied
  --> tests/ui/g-typed-route-duplicate-label.rs:13:39
   |
13 |     let builder = g::route_chain::<0, ArmSteps>(ARM_ONE).and(ARM_TWO);
   |                                       ^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `hibana::global::steps::RouteArm<0>` is not implemented for `StepCons<SendStep<Role<0>, Role<1>, Message<LabelMarker<5>, ()>, 0>, StepNil>`
           but it is implemented for `StepCons<SendStep<Role<0>, Role<0>, _, _>, _>`
note: required by a bound in `hibana::route_chain`
  --> src/global.rs
   |
   | pub const fn route_chain<const CONTROLLER: u8, Steps>(
   |              ----------- required by a bound in this function
...
   |     Steps: steps::RouteArm<CONTROLLER>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `route_chain`

error[E0277]: the trait bound `StepCons<SendStep<Role<0>, Role<1>, Message<LabelMarker<5>, ()>>, StepNil>: hibana::global::steps::RouteArm<0>` is not satisfied
  --> tests/ui/g-typed-route-duplicate-label.rs:13:62
   |
13 |     let builder = g::route_chain::<0, ArmSteps>(ARM_ONE).and(ARM_TWO);
   |                                                          --- ^^^^^^^ unsatisfied trait bound
   |                                                          |
   |                                                          required by a bound introduced by this call
   |
   = help: the trait `hibana::global::steps::RouteArm<0>` is not implemented for `StepCons<SendStep<Role<0>, Role<1>, Message<LabelMarker<5>, ()>, 0>, StepNil>`
           but it is implemented for `StepCons<SendStep<Role<0>, Role<0>, _, _>, _>`
note: required by a bound in `RouteChainBuilder::<CONTROLLER, Steps>::and`
  --> src/global/program.rs
   |
   |     pub const fn and<NextSteps>(
   |                  --- required by a bound in this associated function
...
   |         NextSteps: RouteArm<CONTROLLER>,
   |                    ^^^^^^^^^^^^^^^^^^^^ required by this bound in `RouteChainBuilder::<CONTROLLER, Steps>::and`
